--- a/app/index.html
+++ b/app/index.html
@@ -4,9 +4,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="description" content="Starter">
-	<meta name="author" content="Admin">
+	<meta name="Vlad" content="Ilin">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-	<title>Starter</title>
+	<title>CBD</title>
 
 	<link rel="icon" href="images/favicon.png">
 
